--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
                 <i class="fas fa-phone tm-contact-icon tm-phone-icon"></i>
               </span>
             </span>
-            <span class="media-body"> 010-020-0340 </span>
+            <span class="media-body"> +91 7096032151 </span>
           </a>
         </div>
         <div class="media mb-5">
@@ -19,7 +19,7 @@
                 <i class="fas fa-envelope tm-contact-icon"></i>
               </span>
             </span>
-            <span class="media-body"> info@company.com </span>
+            <span class="media-body"> info@Vibraino.com </span>
           </a>
         </div>
         <div class="media">
@@ -30,8 +30,8 @@
               </span>
             </span>
             <span class="media-body">
-              6120 Suspendisse ultricies<br />Scelerisque tellus, ID
-              10260<br />Magna aliquet porttitor
+              <br />Row house no. 5, Valramdham Society, Dunagara ,
+              Vapi <br>Copyright ©️ Vibraino,
             </span>
           </a>
         </div>
@@ -94,7 +94,7 @@
       </div>
       <div class="col-sm-12 col-md-6">
         <div class="tm-section-text-container-6">
-          <a class="tm-social-icon-container">
+          <a href="https://m.youtube.com/channel/UC4Nmnpr2Qzw7KvXJEKd18SA" class="tm-social-icon-container">
             <span class="tm-social-icon-container-inner">
               <i class="fab fa-facebook-f"></i>
             </span>
@@ -104,7 +104,7 @@
               <i class="fab fa-twitter"></i>
             </span>
           </a>
-          <a class="tm-social-icon-container">
+          <a href="https://www.instagram.com/vibraino_/" class="tm-social-icon-container">
             <span class="tm-social-icon-container-inner">
               <i class="fab fa-instagram"></i>
             </span>
@@ -120,9 +120,9 @@
     <div class="row">
       <footer class="col-sm-12 col-md-6 offset-md-6 px-md-0">
         <p class="tm-copyright-text mb-0 tm-text-primary">
-          Copyright &copy; 2021 Webmedialink 
+          Copyright &copy; 2021 Vibraino 
           
-          - Design: <a rel="nofollow" href="https://webmedialink.com">Webmedialink</a>
+          - Designed by <a rel="nofollow" href="https://webmedialink.com">Webmedialink</a>
         </p>
       </footer>
     </div>
